build-logs-failed/build-monad-peel-0.3.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - monad-peel-0.3 (lib) (first run)
 - monad-peel-0.3 (test:test) (first run)
Configuring library for monad-peel-0.3...
Preprocessing library for monad-peel-0.3...
Building library for monad-peel-0.3...
[1 of 3] Compiling Control.Monad.Trans.Peel
[2 of 3] Compiling Control.Monad.IO.Peel
[3 of 3] Compiling Control.Exception.Peel
Configuring test suite 'test' for monad-peel-0.3...
Preprocessing test suite 'test' for monad-peel-0.3...
Building test suite 'test' for monad-peel-0.3...

<no location info>: warning: [GHC-32850] [-Wmissing-home-modules]
    These modules are needed for compilation but not listed in your .cabal file's other-modules for ‘monad-peel-0.3-inplace-test’ :
        Control.Exception.Peel
        Control.Monad.IO.Peel
        Control.Monad.Trans.Peel
[1 of 4] Compiling Control.Monad.Trans.Peel

Control/Monad/Trans/Peel.hs:32:1: warning: [-Wdodgy-imports]
    Module ‘Prelude’ does not export ‘catch’
   |
32 | import Prelude hiding (catch)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Control/Monad/Trans/Peel.hs:47:1: warning: [-Wunused-imports]
    The import of ‘Data.Monoid’ is redundant
      except perhaps to import instances from ‘Data.Monoid’
    To import instances alone, use: import Data.Monoid()
   |
47 | import Data.Monoid
   | ^^^^^^^^^^^^^^^^^^
[2 of 4] Compiling Control.Monad.IO.Peel

Control/Monad/IO/Peel.hs:40:1: warning: [-Wunused-imports]
    The import of ‘Data.Monoid’ is redundant
      except perhaps to import instances from ‘Data.Monoid’
    To import instances alone, use: import Data.Monoid()
   |
40 | import Data.Monoid
   | ^^^^^^^^^^^^^^^^^^
[3 of 4] Compiling Control.Exception.Peel

Control/Exception/Peel.hs:27:1: warning: [-Wdodgy-imports]
    Module ‘Prelude’ does not export ‘catch’
   |
27 | import Prelude hiding (catch, ioError)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[4 of 4] Compiling Main

test.hs:16:1: error:
    Could not find module ‘Control.Monad.Trans.List’
    Perhaps you meant
      Control.Monad.Trans.Cont (needs flag -package-id rerebase-1.20.2)
      Control.Monad.Trans.Cont (from transformers-0.6.1.0)
      Control.Monad.Trans.RWS (needs flag -package-id rerebase-1.20.2)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
16 | import Control.Monad.Trans.List
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

test.hs:20:1: error:
    Could not find module ‘Control.Monad.Trans.Error’
    Perhaps you meant
      Control.Monad.Trans.Free (needs flag -package-id free-5.2)
      Control.Monad.Trans.Iter (needs flag -package-id free-5.2)
      Control.Monad.Trans.Writer (needs flag -package-id rerebase-1.20.2)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
20 | import Control.Monad.Trans.Error
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build test:test from monad-peel-0.3.

